--- a/src/app/ui/components/home/home.component.html
+++ b/src/app/ui/components/home/home.component.html
@@ -160,7 +160,7 @@
 </section>
 
 <!-- Featured Products Video Section -->
-<section class="featured-video" *ngIf="!isLoading" #featuredVideoSection>
+<section class="featured-video" *ngIf="!isMobile" #featuredVideoSection>
   <div class="container">
     <div class="video-wrapper">
       <video autoplay muted loop>
@@ -209,7 +209,7 @@
 </section>
 
 <!-- Featured Products Video Section -->
-<section class="featured-video" *ngIf="!isLoading" #featuredVideoSection>
+<section class="featured-video" *ngIf="!isMobile" #featuredVideoSection>
   <div class="container">
     <div class="video-wrapper">
       <video autoplay muted loop>
