--- a/src/app/ui/components/brand/brand.component.scss
+++ b/src/app/ui/components/brand/brand.component.scss
@@ -14,13 +14,13 @@ $success-color: #059669;
 $link-color: #0000ee;
 
 .breadcrumb-container{
-  max-width: 1320px;
+  max-width: 1420px;
   margin: auto;
 }
 .brands-container {
-  max-width: 1320px;
-  margin: 40px auto;
-  padding: 0 20px;
+  max-width: 1420px;
+  margin: auto;
+  //padding: 0 20px;
 }
 
 .brands-header {
