--- a/src/app/ui/components/cart/cart.component.scss
+++ b/src/app/ui/components/cart/cart.component.scss
@@ -46,8 +46,8 @@ $widescreen: 1400px;
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: -webkit-fill-available;
+  height: -webkit-fill-available;
   background-color: rgba(0, 0, 0, 0.5);
   opacity: 0;
   visibility: hidden;
@@ -63,13 +63,11 @@ $widescreen: 1400px;
 
 .cart-drawer {
   font-family: $font-family-base;
-  
-  
   position: fixed;
   top: 0;
   right: -100%;
-  width: 100%;
-  height: 100vh;
+  width: -webkit-fill-available;
+  height: -webkit-fill-available;
   background: #fff;
   box-shadow: -2px 0 8px rgba(0, 0, 0, 0.15);
   transition: right 0.3s ease-in-out;
