--- a/src/app/ui/components/contact/contact.component.html
+++ b/src/app/ui/components/contact/contact.component.html
@@ -4,13 +4,13 @@
     <app-main-header></app-main-header>
     <app-navbar></app-navbar>
   
-    <div class="container-xxl">
+    <div class="container-xxl" style="max-width: 1420px !important;">
       <!-- Breadcrumb -->
       <nav aria-label="breadcrumb">
         <app-breadcrumb></app-breadcrumb>
       </nav>
     <!-- Page Title -->
-    <div class="container py-5">
+    <div class="container py-5" style="max-width: 1420px; margin: 0 auto;">
         <!-- Page Title -->
         <div class="row mb-5">
           <div class="col-12 text-center">
