--- a/src/app/ui/components/login/login-popover/login-popover.component.scss
+++ b/src/app/ui/components/login/login-popover/login-popover.component.scss
@@ -17,8 +17,8 @@ $link-color: #0000ee;
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: -webkit-fill-available;
+  height: -webkit-fill-available;
   background: rgba(0, 0, 0, 0.5);
   opacity: 0;
   visibility: hidden;
