--- a/src/app/ui/components/navbar/navbar.component.html
+++ b/src/app/ui/components/navbar/navbar.component.html
@@ -1,8 +1,8 @@
 <div class="navbar-container">
   <nav class="industrial-navbar">
-    <div class="container-fluid px-2 px-lg-5">
-      <div class="row w-100 mx-0">
-        <div class="top-bar d-flex align-items-center justify-content-flex-start">
+    <div class="container-xxxl" style="max-width: 1420px !important; margin: auto;">
+      <div class="row">
+        <div class="top-bar">
           <!-- All Products Dropdown (Desktop) -->
           <div class="all-products-dropdown d-none d-lg-block">
             <button class="dropdown-toggle1" (click)="toggleAllProducts()">
