--- a/src/app/ui/components/user/my-favorites/my-favorites.component.html
+++ b/src/app/ui/components/user/my-favorites/my-favorites.component.html
@@ -3,7 +3,7 @@
     <app-main-header></app-main-header>
     <app-navbar></app-navbar>
 
-    <div class="container-xxl">
+    <div class="container-xxl" style="max-width: 1420px; margin: 0 auto;">
         <!-- Breadcrumb -->
         <nav aria-label="breadcrumb">
             <app-breadcrumb></app-breadcrumb>
