--- a/src/app/ui/components/user/user-sidebar/user-sidebar.component.html
+++ b/src/app/ui/components/user/user-sidebar/user-sidebar.component.html
@@ -113,7 +113,7 @@
 </aside>
 
 <!-- Logout Confirmation Modal -->
-<div class="modal fade" id="logoutModal" tabindex="-1" aria-labelledby="logoutModalLabel" aria-hidden="true">
+<div class="modal" id="logoutModal" tabindex="-1" aria-labelledby="logoutModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
@@ -132,7 +132,7 @@
 </div>
 
 <!-- Logout from All Devices Confirmation Modal -->
-<div class="modal fade" id="logoutAllDevicesModal" tabindex="-1" aria-labelledby="logoutAllDevicesModalLabel" aria-hidden="true">
+<div class="modal" id="logoutAllDevicesModal" tabindex="-1" aria-labelledby="logoutAllDevicesModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
