--- a/src/app/ui/components/cart/cart-page/cart-page.component.html
+++ b/src/app/ui/components/cart/cart-page/cart-page.component.html
@@ -3,7 +3,7 @@
 <app-navbar></app-navbar>
 
 <div class="order-page">
-    <div class="container">
+    <div class="container" style="max-width: 1420px !important;">
         <h1 class="page-title">Your Price Quote Request</h1>
 
         <div class="order-container">
