--- a/src/app/ui/components/footer/footer.component.html
+++ b/src/app/ui/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="py-5" style="background-color: #e0e0e0;">
-  <div class="container">
+  <div class="container" style="max-width: 1420px !important;">
     <div class="row g-4">
       <!-- Company Info -->
       <div class="col-lg-4 col-md-6">
