--- a/src/app/ui/components/main-header/main-header.component.html
+++ b/src/app/ui/components/main-header/main-header.component.html
@@ -1,6 +1,6 @@
 <!-- Login-popover'ı aşağıdaki şekilde taşıyın, main-header içinde değil, dışında tanımlayın -->
 <header class="main-header" [class.dark-theme]="isDarkTheme">
-  <div class="container">
+  <div class="container" style="max-width: 1420px !important;">
     <div class="header-content">
       <!-- Logo Section -->
       <div class="logo" (click)="createRipple($event); navigateToHome()">
