--- a/src/app/ui/components/main-header/main-header.component.scss
+++ b/src/app/ui/components/main-header/main-header.component.scss
@@ -87,7 +87,7 @@ $transition-speed: 0.3s;
 
   .container {
     height: 100%;
-    padding: 0 2rem;
+    //padding: 0 2rem;
     margin: 0 auto;
     max-width: 1440px;
     position: relative;
