--- a/src/app/ui/components/order/order-summary/order-summary.component.html
+++ b/src/app/ui/components/order/order-summary/order-summary.component.html
@@ -3,7 +3,7 @@
 <app-navbar></app-navbar>
 
 <div class="order-summary-page">
-  <div class="container">
+  <div class="container-xxl" style="max-width: 1420px; margin: 0 auto;">
     <div class="skeleton-container" *ngIf="loading">
       <!-- Başlık Skeleton -->
       <div class="skeleton-success-message">
