--- a/src/app/ui/components/search-results/search-results.component.html
+++ b/src/app/ui/components/search-results/search-results.component.html
@@ -1,16 +1,56 @@
 <app-main-header></app-main-header>
 <app-navbar></app-navbar>
 
-<div class="container-xxl">
+<div class="container-xxl" style="max-width: 1420px !important;">
   <div class="breadcrumb">
     <app-breadcrumb></app-breadcrumb>
   </div>
+
+  <!-- Search Results Title -->
+  <div class="row mb-3">
+    <div class="col-12">
+      <h2>Search Result: "{{ searchTerm }}"</h2>
+    </div>
+  </div>
+
+  <!-- Categories Section -->
+  <section class="categories" *ngIf="subCategories && subCategories.length > 0">
+    <div class="category-header">
+      <p>Related Categories</p>
+    </div>
+    <div class="container">
+      <button class="scroll-btn left" (click)="scrollLeft()" *ngIf="!isMobile && subCategories.length > 6">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+          stroke-linecap="round" stroke-linejoin="round">
+          <polyline points="15 18 9 12 15 6"></polyline>
+        </svg>
+      </button>
+
+      <div class="category-grid" #categoryGrid>
+        <div class="category-card" *ngFor="let category of subCategories" [routerLink]="['/', category?.id]">
+          <div class="category-image">
+            <img [src]="category.categoryImage?.url" [alt]="category.name">
+          </div>
+          <div class="category-content">
+            <h3 class="category-title">{{ category.name }}</h3>
+            <a class="btn-category" [routerLink]="['/', category?.id]" *ngIf="isMobile">Look at</a>
+          </div>
+        </div>
+      </div>
+
+      <button class="scroll-btn right" (click)="scrollRight()" *ngIf="!isMobile && subCategories.length > 6">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+          stroke-linecap="round" stroke-linejoin="round">
+          <polyline points="9 18 15 12 9 6"></polyline>
+        </svg>
+      </button>
+    </div>
+  </section>
 
   <!-- Main Content Area -->
   <div class="row">
     <!-- Sorting and Total Items -->
     <div class="col-12 mb-3">
-      <h2>Search Result: "{{ searchTerm }}"</h2>
       <div class="d-flex justify-content-between align-items-center flex-wrap">
         <p class="total-items mb-0">{{ totalItems }} product found</p>
         <div class="sort-dropdown">
@@ -47,14 +87,15 @@
       </app-ui-product-list>
       
       <app-pagination 
-            [totalItems]="totalItems" 
-            [pageRequest]="pageRequest" 
-            (pageChange)="handlePageChange($event)"
+        [totalItems]="totalItems" 
+        [pageRequest]="pageRequest" 
+        (pageChange)="handlePageChange($event)"
         *ngIf="totalItems > 0"
         class="mt-3">
       </app-pagination>
     </div>
   </div>
 </div>
+
 <app-footer></app-footer>
 <app-downbar></app-downbar>
