--- a/src/app/ui/components/user/desktop-user-sidebar/desktop-user-sidebar.component.scss
+++ b/src/app/ui/components/user/desktop-user-sidebar/desktop-user-sidebar.component.scss
@@ -14,10 +14,11 @@ $link-color: #0000ee;
 
 .desktop-sidebar {
   background: white;
-  border-radius: 8px;
+  border-radius: 0.25rem;
   box-shadow: 0 1px 3px rgba(0,0,0,0.1);
-  padding: 20px;
-  margin-left: 20px;
+  //padding: 20px;
+  margin: 2rem 0 0 0;
+  //margin-left: 20px;
 
   .user-info {
     text-align: center;
